--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This is the released version of rabbitmq-public-umbrella. You can clone the full version with: hg clone http://hg.rabbitmq.com/rabbitmq-public-umbrella
+This is a simple RabbitMQ pluggin that provides an HTTP interface to AMQP.
